--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/1aece32a4f.js" crossorigin="anonymous"></script>
 </head>
 <body class="poppins-regular">
     <div class="container">
@@ -16,13 +17,13 @@
                 <div class="month poppins-medium"></div>
                 <div class="btns">
                     <div class="btn prevBtn">
-                        <button>&#8592;</button>
+                        <button><i class="fa-solid fa-arrow-left"></i></button>
                     </div>
                     <div class="btn today">
-                        <button>~</button>
+                        <button><i class="fa-solid fa-angle-down"></i></button>
                      </div>
                     <div class="btn nextBtn">
-                        <button>&#8594;</button>
+                        <button><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                 </div>
             </div>
